--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -17,6 +17,7 @@
     overflow-x: hidden;
     background-color: $header-top-bg;
   }
+
   &__top-inner {
     display: flex;
     justify-content: space-between;
@@ -24,17 +25,21 @@
     align-items: center;
     transition: all 0.6s;
   }
-  &__top-inner.sticky{
+
+  &__top-inner.sticky {
     height: 45px;
   }
+
   &__box--left,
   &__box--right {
     display: flex;
     align-items: center;
   }
+
   &__box--left {
     padding-right: 500px;
   }
+
   &__logo {
     font-size: 35px;
     & span {
@@ -42,25 +47,17 @@
       margin-right: 5px;
     }
   }
+
   &__menu {
     margin-left: 40px;
     & ul {
       display: flex;
     }
     & ul li {
-      margin-left: 48px;
+      margin-left: 52px;
       position: relative;
     }
-    & ul li::before {
-      content: "";
-      position: absolute;
-      bottom: -34px;
-      left: 0px;
-      width: 60px;
-      height: 0;
-      background-color: $black;
-      transition: all 0.4s;
-    }
+
     & ul li:hover::before {
       height: 3px;
     }
@@ -90,30 +87,37 @@
       transition: all 0.5s;
       opacity: 1;
     }
+
     & .menu-item.hide-item {
       transition-delay: 0.6s;
       opacity: 0;
       transform: scale(0);
     }
+
     &:nth-child(2) .menu-item.hide-item {
       transition-delay: 0.6s;
     }
+
     &:nth-child(3) .menu-item.hide-item {
       transition-delay: 0.5s;
     }
+
     &:nth-child(2) .menu-item {
       transition-delay: 0.1s;
     }
+
     &:nth-child(3) .menu-item {
       transition-delay: 0.2s;
     }
   }
+
   &__btn {
     display: flex;
     &-menu {
       margin-left: 30px;
     }
   }
+
   &__search-form {
     position: absolute;
     top: 23px;
@@ -141,7 +145,7 @@
     }
     &::before {
       content: "\f002";
-      font-family: 'icomoon';
+      font-family: "icomoon";
       position: absolute;
       top: 12px;
       left: -26px;
@@ -151,7 +155,7 @@
   }
 }
 
-.close{
+.close {
   height: 44px;
   font-size: 18px;
   line-height: 44px;
@@ -161,13 +165,98 @@
   cursor: pointer;
   opacity: 0;
   visibility: hidden;
-  &::before{
+  &::before {
     content: "\f00d";
-    font-family: 'icomoon';
+    font-family: "icomoon";
     font-size: 16px;
   }
-  &.active{
+  &.active {
     opacity: 1;
     visibility: visible;
   }
 }
+//end header
+
+//start categories
+.categories {
+  padding-top: 100px;
+  position: relative;
+
+  &__inner {
+    display: flex;
+    justify-content: space-evenly;
+    height: 80px;
+    align-items: center;
+    overflow: hidden;
+
+    &--left ul,
+    &--right ul {
+      display: flex;
+    }
+
+    &--left ul li,
+    &--right ul li {
+      padding: 0 14px;
+      height: 80px;
+    }
+
+    &--left ul li a,
+    &--right ul li  a{
+      transform: matrix(1, 0, 0, 1, 25) !important;
+      transition: all 0,4s;
+      
+    }
+
+    &--left ul li a:hover,
+    &--right ul li  a:hover{
+      @include  f600;
+    }
+
+    & ul li a {
+      position: relative;
+    }
+
+    &-submenu.categories__submenu {
+      background-color: $peach;
+      position: absolute;
+      left: 0;
+      top: 180px;
+      width: 100%;
+      overflow: hidden;
+      height: 0;
+      transition: all 0.5s;
+      z-index: 1;
+    }
+
+    &-submenu .categories__submenu-items{
+      display: flex;
+      align-items: center;
+      margin-left: 20.6%;
+    }
+    &-submenu .categories__submenu-items .categories__submenu-item {
+      padding-right: 60px;
+      position: relative;
+    }
+
+    &-submenu .categories__submenu-items .categories__submenu-item::before{
+      content: '';
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      border: 2px solid $black;
+      background-color: $black;
+      border-radius: 50%;
+    }
+    &-submenu .categories__submenu-items .categories__submenu-item:last-child::before{
+      border: none;
+    }
+
+    &-submenu .categories__submenu-item:hover{
+      @include f600;
+    }
+  }
+}
+.categories__inner .categories__menu-list li:hover .categories__inner-submenu.categories__submenu {
+  height: 120px;
+}
+//end categories
