--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -201,15 +201,14 @@
     }
 
     &--left ul li a,
-    &--right ul li  a{
+    &--right ul li a {
       transform: matrix(1, 0, 0, 1, 25) !important;
-      transition: all 0,4s;
-      
+      transition: all 0, 4s;
     }
 
     &--left ul li a:hover,
-    &--right ul li  a:hover{
-      @include  f600;
+    &--right ul li a:hover {
+      @include f600;
     }
 
     & ul li a {
@@ -228,7 +227,7 @@
       z-index: 1;
     }
 
-    &-submenu .categories__submenu-items{
+    &-submenu .categories__submenu-items {
       display: flex;
       align-items: center;
       margin-left: 20.6%;
@@ -238,8 +237,8 @@
       position: relative;
     }
 
-    &-submenu .categories__submenu-items .categories__submenu-item::before{
-      content: '';
+    &-submenu .categories__submenu-items .categories__submenu-item::before {
+      content: "";
       position: absolute;
       top: 10px;
       right: 20px;
@@ -247,16 +246,140 @@
       background-color: $black;
       border-radius: 50%;
     }
-    &-submenu .categories__submenu-items .categories__submenu-item:last-child::before{
+    &-submenu
+      .categories__submenu-items
+      .categories__submenu-item:last-child::before {
       border: none;
     }
 
-    &-submenu .categories__submenu-item:hover{
+    &-submenu .categories__submenu-item:hover {
       @include f600;
     }
   }
 }
-.categories__inner .categories__menu-list li:hover .categories__inner-submenu.categories__submenu {
+.categories__inner
+  .categories__menu-list
+  li:hover
+  .categories__inner-submenu.categories__submenu {
   height: 120px;
 }
 //end categories
+
+//start slider
+.slider {
+  &__item {
+    max-width: 1760px;
+    width: 100%;
+    position: relative;
+
+    &-img {
+      min-height: 787px;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      display: block;
+    }
+
+    &-info {
+      width: 480px;
+      position: absolute;
+      top: 200px;
+      left: 150px;
+    }
+
+    &-dots {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 110px;
+      align-items: center;
+      padding-left: 12.5vw;
+      border-top: 1px solid hsla(0, 0%, 100%, 0.3);
+      display: flex;
+    }
+
+    &-dots--left {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      max-width: 160px;
+      height: 10px;
+      width: 100%;
+      border-top: 1px solid hsla(0, 0%, 100%, 0.3);
+    }
+
+    &-dots__total {
+      position: absolute;
+      bottom: 30px;
+      left: 71px;
+      color: $white;
+    }
+  }
+
+  &__suptitle {
+    color: $white;
+    font-size: 20px;
+    line-height: 28px;
+    margin-bottom: 27px;
+  }
+  &__title{
+    color: $white;
+    font-size: 60px;
+    line-height: 64px;
+    margin-bottom: 32px;
+  }
+
+  &__btn{
+    display: inline-block;
+    padding: 11.5px 23px;
+    @include f600;
+    font-size: 14px;
+    line-height: 1.215;
+    color: $hovertext;
+    background-color: $white;
+    box-shadow: 0 10px 20px rgba(0,0, 0, 0.1);
+    border-radius: 20px;
+    cursor: pointer;
+    transition: all 0.1s;
+  }
+
+  &__btn:hover{
+    background-color:transparent;
+    color: $white;
+    box-shadow: none;
+  }
+}
+
+.slick-dots{
+  position: absolute;
+  bottom: 68px;
+  left: 65px;
+
+  & li{
+    display: none;
+  }
+
+  & .slick-active{
+    display: block;
+    position: relative;
+  }
+
+  & .slick-active::before{
+    content: '';
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    height: 2px;
+    width: 100%;
+    background-color: $white;
+  }
+
+  & li button{
+    border: none;
+    background-color: transparent;
+    color: $white;
+    font-size: 16px;
+  }
+}
+//end slider
