--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -323,14 +323,14 @@
     line-height: 28px;
     margin-bottom: 27px;
   }
-  &__title{
+  &__title {
     color: $white;
     font-size: 60px;
     line-height: 64px;
     margin-bottom: 32px;
   }
 
-  &__btn{
+  &__btn {
     display: inline-block;
     padding: 11.5px 23px;
     @include f600;
@@ -338,35 +338,35 @@
     line-height: 1.215;
     color: $hovertext;
     background-color: $white;
-    box-shadow: 0 10px 20px rgba(0,0, 0, 0.1);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
     cursor: pointer;
     transition: all 0.1s;
   }
 
-  &__btn:hover{
-    background-color:transparent;
+  &__btn:hover {
+    background-color: transparent;
     color: $white;
     box-shadow: none;
   }
 }
 
-.slick-dots{
+.slick-dots {
   position: absolute;
   bottom: 68px;
   left: 65px;
 
-  & li{
+  & li {
     display: none;
   }
 
-  & .slick-active{
+  & .slick-active {
     display: block;
     position: relative;
   }
 
-  & .slick-active::before{
-    content: '';
+  & .slick-active::before {
+    content: "";
     position: absolute;
     bottom: -3px;
     left: 0;
@@ -375,7 +375,7 @@
     background-color: $white;
   }
 
-  & li button{
+  & li button {
     border: none;
     background-color: transparent;
     color: $white;
@@ -383,3 +383,189 @@
   }
 }
 //end slider
+
+//start sales-leaders
+.sales-leaders {
+  padding: 100px 0px;
+
+  &__title {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  &__subtitle {
+    text-align: center;
+    margin-bottom: 30px;
+  }
+
+  &__items {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
+  }
+
+  &__inner {
+    padding: 30px;
+    transition: all 0.3s;
+
+    & .sales-leaders__hidden {
+      opacity: 0;
+      transition: all 0.3s;
+    }
+  }
+
+  &__discount {
+    text-align: right;
+    position: relative;
+    z-index: 1;
+
+    & span {
+      @include f600;
+      padding-left: 10px;
+      z-index: 100;
+    }
+
+    &-square {
+      position: absolute;
+      top: -18px;
+      right: 0;
+      width: 54px;
+      height: 60px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: -1;
+
+      & span:nth-child(1) {
+        width: 100%;
+        height: 100%;
+        border-radius: 38% 62% 63% 37% / 41% 44% 56% 59%;
+        transition: all 0.5s;
+        animation: animate 6s linear infinite;
+        background-color: $peach;
+      }
+    }
+  }
+
+  &__description,
+  &__price {
+    text-align: center;
+  }
+
+  &__description {
+    font-size: 20px;
+    line-height: 1.6;
+    max-width: 263px;
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 8px;
+  }
+
+  &__price{
+    display: flex;
+    justify-content: center;
+
+    &--new { 
+      @include f600;
+      padding-right: 25px;
+    }
+
+    &--old {
+      text-decoration: line-through;
+    }
+  }
+
+  &__bottom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 22px 15px 0px;
+
+    & .bottom-buy{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 7px 14px 7px 0px;
+      border: none;
+      border-radius: 60px;
+      background-color: rgba(237, 235, 233, 0.5);
+      box-shadow: none;
+      cursor: pointer;
+      transition: all 0.3s;
+      text-decoration: none;
+      outline: none;
+    } 
+
+    & .bottom-buy:hover {
+      background-color: $peach;
+    }
+  }
+
+  &__text{
+    font-size: 14px;
+    @include f600;
+    margin-left: 28px;
+    margin-right: 10px;
+  }
+
+  &__icon {
+    border-radius: 50%;
+    position: relative;
+    margin-left: 10px;
+  }
+
+  &__icon::before{
+    font-size: 20px;
+    padding: 5px;
+    background-color: $white;
+    border-radius: 50%;
+  }
+
+  &__inner:hover{
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.6);
+
+    & .sales-leaders__hidden {
+      opacity: 1;
+    }
+  }
+
+  &__buy {
+    font-size: 14px;
+    margin-left: 30px;
+    text-align: center;
+    color: darkgray;
+    cursor: pointer;
+    transition: color 0.3s, border 0.3s ease;
+    position: relative
+  }
+
+  &__buy:before{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: $underline;
+  }
+
+  &__buy:hover{
+    color: $text;
+  }
+
+  &__buy:hover::before{
+    background-color: $text;
+  }
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+//end sales-leaders
