--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -557,7 +557,42 @@
   &__buy:hover::before{
     background-color: $text;
   }
+
+  &__loadMore{
+    font-size: 14px;
+    line-height: 1.715;
+    @include f600;
+    max-width: 1440px;
+    width: 100%;
+    padding: 15px 0px;
+    border: 1px solid $underline;
+    text-align: center;
+    margin: 0 auto;
+    align-items: center;
+    position: relative;
+    transition: all 0.3s;
+    cursor: pointer;
+  }
+
+  &__loadMore::after{
+    content: '+';
+    position: absolute;
+    padding-left: 20px;
+    font-size: 24px;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  &__loadMore:hover{
+    border: 1px solid $text;
+  }
 }
+
+//Количество карточек до нажатия кнопки Загрузить больше
+#boxs .box:nth-child(n+5) {
+  display: none;
+}
+
 
 @keyframes animate {
   0% {
