--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -385,7 +385,8 @@
 //end slider
 
 //start sales-leaders
-.sales-leaders {
+.sales-leaders,
+.new-items {
   padding: 100px 0px;
 
   &__title {
@@ -409,7 +410,8 @@
     padding: 30px;
     transition: all 0.3s;
 
-    & .sales-leaders__hidden {
+    & .sales-leaders__hidden,
+     .new-items__hidden {
       opacity: 0;
       transition: all 0.3s;
     }
@@ -525,7 +527,8 @@
   &__inner:hover{
     box-shadow: 0 10px 25px rgba(0, 0, 0, 0.6);
 
-    & .sales-leaders__hidden {
+    & .sales-leaders__hidden,
+     .new-items__hidden {
       opacity: 1;
     }
   }
@@ -558,7 +561,8 @@
     background-color: $text;
   }
 
-  &__loadMore{
+  &__loadMore,
+  &_newItemsloadMore{
     font-size: 14px;
     line-height: 1.715;
     @include f600;
@@ -574,7 +578,8 @@
     cursor: pointer;
   }
 
-  &__loadMore::after{
+  &__loadMore::after,
+  &_newItemsloadMore::after{
     content: '+';
     position: absolute;
     padding-left: 20px;
@@ -583,13 +588,18 @@
     transform: translateY(-50%);
   }
 
-  &__loadMore:hover{
+  &__loadMore:hover,
+  &_newItemsloadMore:hover{
     border: 1px solid $text;
   }
 }
 
 //Количество карточек до нажатия кнопки Загрузить больше
 #boxs .box:nth-child(n+5) {
+  display: none;
+}
+
+#newBoxs .newBox:nth-child(n+5) {
   display: none;
 }
 
